css/massagespage.css
.mainimage {
  display: block;
  margin: auto;
  width: 60%;
  border-radius: 30px;
}

article {
  margin-top: 120px;
  background-color: #ffffff;
  line-height: 1.42857;
}

section.centertext {
  text-align: center;
  font-size: 20px;
}

article section {
  width: 70%;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 2%;
}

section {
  float: none;
}

section h2 {
  font-weight: bold;
  color: #940868;
  margin-bottom: 20px;
}

#C1,
#C2,
#C3,
#C4,
#C5,
#C6,
#C7,
#C8,
#C9 {
    margin-top: 60px;
    margin-bottom: 3%;
    display: flex;
}

section img {
  float: left;
  margin-right: 10px;
}

.button {
  display: inline-block;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  font-weight: normal;
  border: 0;
  border-radius: 0;
  background: #940868;
  color: #ffffff;
  margin-top: 15px;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857;
}

@media screen and (max-width: 1200px) {
  #C1,
  #C2,
  #C3,
  #C4,
  #C5,
  #C6,
  #C7,
  #C8,
  #C9 {
      margin-top: 60px;
      margin-bottom: 3%;
      display: flex;
  }

  article section {
    width: 60%;
    margin: auto;
    margin-bottom: 5%;
    margin-top: 5%;
  }
}

@media screen and (max-width: 900px) {
  #C1,
  #C2,
  #C3,
  #C4,
  #C5,
  #C6,
  #C7,
  #C8 {
      flex-direction: column;
  }
}

@media screen and (max-width: 900px) {
  article section {
    width: 90%;
    margin-bottom: 5%;
  }
}

@media screen and (max-width: 1270px) {
  .mainimage {
    width: 100%;
    padding: 0 20px;
  }
}

